# OpenStudioLandscapes-Flamenco-Worker

./: .coveragerc  README.md  pyproject.toml  pyproject_layer.toml  pyproject_layer.yaml
.nox/: pylint-report.json  pylint-report.txt
.sbom/: cyclonedx-py.3.11.json  pipdeptree.3.11.dot  pipdeptree.3.11.mermaid
src/OpenStudioLandscapes/Flamenco_Worker/: __init__.py  assets.py  constants.py  definitions.py  readme_feature.py
src/OpenStudioLandscapes/Flamenco_Worker/config/: config_default.yml  models.py
src/OpenStudioLandscapes/Flamenco_Worker/doc/: readme.py
