[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "PyYAML",
    "backoff",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git@v1.0.0",
    "gitpython",
    "importlib-metadata; python_version<\"3.8\"",
    "snakemd",
]
description = "Flamenco-Worker Feature for OpenStudioLandscapes"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-Flamenco-Worker"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-Flamenco-Worker[coverage]",
    "OpenStudioLandscapes-Flamenco-Worker[lint]",
    "OpenStudioLandscapes-Flamenco-Worker[nox]",
    "OpenStudioLandscapes-Flamenco-Worker[readme]",
    "OpenStudioLandscapes-Flamenco-Worker[sbom]",
    "OpenStudioLandscapes-Flamenco-Worker[testing]",
    "dagster-webserver==1.9.11",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Flamenco @ git+https://github.com/michimussato/OpenStudioLandscapes-Flamenco.git",
    "OpenStudioLandscapes-Flamenco-Worker[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Flamenco @ git+https://github.com/michimussato/OpenStudioLandscapes-Flamenco.git",
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Flamenco @ git+https://github.com/michimussato/OpenStudioLandscapes-Flamenco.git",
    "OpenStudioLandscapes-Flamenco-Worker[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Flamenco-Worker"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-Flamenco-Worker"
module_name = "OpenStudioLandscapes.Flamenco_Worker.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.Flamenco_Worker",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
